--- a/package.json
+++ b/package.json
@@ -1,19 +1,59 @@
 {
   "name": "crm-gateway-be",
   "version": "1.0.0",
-  "description": "check ddd",
-  "main": "index.js",
+  "description": "This is the gatway service for all E-com web",
+  "main": "src/app.ts",
+  "type": "module",
   "scripts": {
+    "start": "npm run build && cross-env NODE_ENV=production node ./dist/app",
+    "build": "npm run clean && npm run build:ts",
+    "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/app.ts",
+    "clean": "rimraf dist",
+    "build:ts": "tsc && tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.5.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "@types/request-ip": "^0.0.41",
+    "cross-env": "^7.0.3",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "winston": "^3.17.0"
+    "axios": "^1.7.7",
+    "chalk": "^5.4.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
+    "http-proxy-middleware": "^3.0.0",
+    "ioredis": "^5.4.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.5.4",
+    "morgan": "^1.10.0",
+    "request-ip": "^3.3.0",
+    "winston": "^3.14.2",
+    "zod": "^3.23.8"
   }
 }
