--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "crm-gateway-be",
   "version": "1.0.0",
-  "description": "This is the gatway service for all E-com web",
-  "main": "src/app.ts",
+  "description": "This is the gatway service for all the microservices in the CRM system. It is responsible for routing requests to the appropriate microservice and aggregating the responses.",
+  "main": "src/interfaces/rest/index.ts",
   "type": "module",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node ./dist/app",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/interfaces/rest/index.js",
     "build": "npm run clean && npm run build:ts",
-    "dev": "cross-env NODE_ENV=development tsx watch --clear-screen=false src/app.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch  --clear-screen=false src/interfaces/rest/index.ts",
     "clean": "rimraf dist",
     "build:ts": "tsc && tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "jahangeer-dev",
   "license": "ISC",
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/amqplib": "^0.10.7",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -37,6 +38,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "amqplib": "^0.10.7",
     "axios": "^1.7.7",
     "chalk": "^5.4.1",
     "compression": "^1.7.4",
@@ -52,6 +54,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
+    "prom-client": "^15.1.3",
     "request-ip": "^3.3.0",
     "winston": "^3.14.2",
     "zod": "^3.23.8"
